; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_dump/extr_pg_dump.c_expand_schema_name_patterns.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_dump/extr_pg_dump.c_expand_schema_name_patterns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32, %struct.TYPE_10__* }
%struct.TYPE_12__ = type { i32 }

@.str = private unnamed_addr constant [43 x i8] c"SELECT oid FROM pg_catalog.pg_namespace n\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"n.nspname\00", align 1
@PGRES_TUPLES_OK = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [48 x i8] c"no matching schemas were found for pattern \22%s\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_11__*, i32*, i32)* @expand_schema_name_patterns to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expand_schema_name_patterns(i32* %0, %struct.TYPE_11__* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_12__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.TYPE_10__*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_10__*, %struct.TYPE_10__** %14, align 8
  %16 = icmp eq %struct.TYPE_10__* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  br label %81

18:                                               ; preds = %4
  %19 = call %struct.TYPE_12__* (...) @createPQExpBuffer()
  store %struct.TYPE_12__* %19, %struct.TYPE_12__** %9, align 8
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %21, align 8
  store %struct.TYPE_10__* %22, %struct.TYPE_10__** %11, align 8
  br label %23

23:                                               ; preds = %74, %18
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %25 = icmp ne %struct.TYPE_10__* %24, null
  br i1 %25, label %26, label %78

26:                                               ; preds = %23
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %28 = call i32 @appendPQExpBufferStr(%struct.TYPE_12__* %27, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @GetConnection(i32* %29)
  %31 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %32 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %33 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = call i32 @processSQLNamePattern(i32 %30, %struct.TYPE_12__* %31, i32 %34, i32 0, i32 0, i32* null, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32* null, i32* null)
  %36 = load i32*, i32** %5, align 8
  %37 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %38 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load i32, i32* @PGRES_TUPLES_OK, align 4
  %41 = call i32* @ExecuteSqlQuery(i32* %36, i32 %39, i32 %40)
  store i32* %41, i32** %10, align 8
  %42 = load i32, i32* %8, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %53

44:                                               ; preds = %26
  %45 = load i32*, i32** %10, align 8
  %46 = call i32 @PQntuples(i32* %45)
  %47 = icmp eq i32 %46, 0
  br i1 %47, label %48, label %53

48:                                               ; preds = %44
  %49 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %50 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 8
  %52 = call i32 @fatal(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.2, i64 0, i64 0), i32 %51)
  br label %53

53:                                               ; preds = %48, %44, %26
  store i32 0, i32* %12, align 4
  br label %54

54:                                               ; preds = %66, %53
  %55 = load i32, i32* %12, align 4
  %56 = load i32*, i32** %10, align 8
  %57 = call i32 @PQntuples(i32* %56)
  %58 = icmp slt i32 %55, %57
  br i1 %58, label %59, label %69

59:                                               ; preds = %54
  %60 = load i32*, i32** %7, align 8
  %61 = load i32*, i32** %10, align 8
  %62 = load i32, i32* %12, align 4
  %63 = call i32 @PQgetvalue(i32* %61, i32 %62, i32 0)
  %64 = call i32 @atooid(i32 %63)
  %65 = call i32 @simple_oid_list_append(i32* %60, i32 %64)
  br label %66

66:                                               ; preds = %59
  %67 = load i32, i32* %12, align 4
  %68 = add nsw i32 %67, 1
  store i32 %68, i32* %12, align 4
  br label %54

69:                                               ; preds = %54
  %70 = load i32*, i32** %10, align 8
  %71 = call i32 @PQclear(i32* %70)
  %72 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %73 = call i32 @resetPQExpBuffer(%struct.TYPE_12__* %72)
  br label %74

74:                                               ; preds = %69
  %75 = load %struct.TYPE_10__*, %struct.TYPE_10__** %11, align 8
  %76 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %75, i32 0, i32 1
  %77 = load %struct.TYPE_10__*, %struct.TYPE_10__** %76, align 8
  store %struct.TYPE_10__* %77, %struct.TYPE_10__** %11, align 8
  br label %23

78:                                               ; preds = %23
  %79 = load %struct.TYPE_12__*, %struct.TYPE_12__** %9, align 8
  %80 = call i32 @destroyPQExpBuffer(%struct.TYPE_12__* %79)
  br label %81

81:                                               ; preds = %78, %17
  ret void
}

declare dso_local %struct.TYPE_12__* @createPQExpBuffer(...) #1

declare dso_local i32 @appendPQExpBufferStr(%struct.TYPE_12__*, i8*) #1

declare dso_local i32 @processSQLNamePattern(i32, %struct.TYPE_12__*, i32, i32, i32, i32*, i8*, i32*, i32*) #1

declare dso_local i32 @GetConnection(i32*) #1

declare dso_local i32* @ExecuteSqlQuery(i32*, i32, i32) #1

declare dso_local i32 @PQntuples(i32*) #1

declare dso_local i32 @fatal(i8*, i32) #1

declare dso_local i32 @simple_oid_list_append(i32*, i32) #1

declare dso_local i32 @atooid(i32) #1

declare dso_local i32 @PQgetvalue(i32*, i32, i32) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @resetPQExpBuffer(%struct.TYPE_12__*) #1

declare dso_local i32 @destroyPQExpBuffer(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
